# bll

./: .gitignore  .ignore  Cargo.toml  README.md  build.rs  mix.exs
lib/: elixir_ml.ex
lib/ElixirML/: layer.ex  matrix.ex  mnist.ex  network.ex  nifs.ex
lib/mix/tasks/: fashion.ex  tester.ex
native/elixirml_nifs/src/: lib.rs  matrix.rs  mnist.rs
paper/: citations.bib  ml.tex
src/: layer.rs  loss.rs  main.rs  matrix.rs  mnist.rs  network.rs  optimiser.rs  rowvector.rs
src/matrix/: main.air  main.metal  main.metallib  metal.rs  mod.rs
src/tasks/: mnist.rs  mod.rs  test.rs  xor.rs
