[package]
name = "bll"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
readme = "README.md"
authors = ["Rishab Garg <contact@rishab-garg.me>"]
homepage = "https://github.com/RisGar/bll"
repository = "https://github.com/RisGar/bll"
build = "build.rs"
links = "Accelerate.framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
clap = { version = "4.4.4", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
ansi_term = "0.12.1"
bincode = "1.3.3"
